--- a/cpgrid.css
+++ b/cpgrid.css
@@ -85,7 +85,7 @@
 }
 .cpgrid_backimg {
 	width:150px;
-	height:150px;	
+	height:150px;
 }
 .cpgrid_backimg img{
 	border: 0px #660000 dashed;
@@ -119,6 +119,9 @@ border-color: #666 #e3e3e3 #eee #999;
 	margin-bottom:20px;
 }
 
+.cpgrid_fluiditemblockover img{
+	border: 2px;
+}
 .cpgrid_fluiditemblock {
 	text-align:center;
 	float:left; 
@@ -131,6 +134,7 @@ border-color: #666 #e3e3e3 #eee #999;
 	background:#ffffff;
 	border: 1px solid #ccc;
 	}
+
 
 .cpgrid_fluiditemblockover {
 	text-align:center;
@@ -146,6 +150,6 @@ border-color: #666 #e3e3e3 #eee #999;
 
 	}
 
-.cpgrid_fluiditemblockover img, .cpgrid_fluiditemblock img {
+.cpgrid_fluiditemblockover img, .itemblock img {
 	border:0px;
 }
